tweaked the stats implementation a little annotated the edit timetable view since it has grown to be a big one fixed the unnecessary horizontal scrollbar that was appearing on the history viewer

--- a/public/modules/timetables/css/timetable.css
+++ b/public/modules/timetables/css/timetable.css
@@ -97,7 +97,7 @@
 .history-viewer {
   min-height : 60px;
   max-height : 60px;
-  overflow   : scroll;
+  overflow   : auto;
   margin     : 10px 0;
   border     : 0.1em dotted #999999;
 }
